<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iimg"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@color/black" />

            <TextView
                android:id="@+id/iname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:drawablePadding="4dp"
                android:background="#4D000000"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/food_name"
                android:textSize="20sp"
                android:textColor="@android:color/white" />

        </FrameLayout>

        <TextView
            android:id="@+id/idetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/detail"
            android:textSize="15sp"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/bahan"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#3d63eb" />

        <TextView
            android:id="@+id/nama_bahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/nama_bahan"
            android:textSize="15sp"
            android:textColor="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cara_memasak"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#3d63eb" />

        <TextView
            android:id="@+id/memasak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/memasak"
            android:textSize="15sp"
            android:textColor="#000" />

    </LinearLayout>

</ScrollView>